Fixed some spacing issues in FAQS/Sponsors

--- a/src/components/SponsorsPage/SponsorsPage.scss
+++ b/src/components/SponsorsPage/SponsorsPage.scss
@@ -12,7 +12,7 @@
   color: #555459;
   letter-spacing: 5px;
   font-size: 48px;
-  padding: 0 0 40px 0;
+  padding: 40px 0 0 0;
 }
 
 .homeButton {
